@@ -1,3 +1,7 @@
+Mon Dec 20 02:47:38 2010  URABE Shyouhei  <shyouhei@ruby-lang.org>
+
+	* vm.c, vm_core.h, thread.c: bytestream reverted.
+
 Fri Dec 17 19:01:07 2010  URABE Shyouhei  <shyouhei@ruby-lang.org>
 
 	* thread.c (rb_vm_terminate_all_really_everything): avoid waiting
